--- a/calculadora.css
+++ b/calculadora.css
@@ -1,16 +1,47 @@
+.container{
+background-color: bisque;
+width: 275px;
+}
+
 .screen {
+    background-color: rgb(0, 0, 0);
+    border-radius: 50px;
     height: 50px;
-    width: 150px;
+    width: 190px;
     margin-bottom: 10px;
+    margin-left: 5px;
+    font-family: 'Orbitron', sans-serif;
+    color:white;
+    font-size: 20px;
 }
 
 .keys {
-    width: 250px;
+    width: 300px;
 }
 
-.btn,
+.btn{
+    color: rgb(255, 255, 255);
+    background-color: rgb(0, 0, 0);
+    border-radius: 50px;
+    margin-left: 5px;
+    width: 60px;
+    height: 40px;
+    margin-bottom: 5px;
+}
 .operator {
-    width: 50px;
-    height: 50px;
+    color: rgb(255, 255, 255);
+    background-color: rgb(245, 188, 2);
+    border-radius: 25%;
+    width: 60px;
+    height: 40px;
+    margin-left: 5px;
+    margin-bottom: 5px;
+}
+#C{
+    color: rgb(255, 255, 255);
+    background-color: rgb(250, 0, 0);
+    border-radius: 25%;
+    width: 60px;
+    height: 60px;
     margin-bottom: 5px;
 }
